--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </div>
       </form>
       <div class="grocery-container">
-        <div class="grocery-list"></div>
+        <div class="grocery-list">
+        </div>
         <button class="clear-btn">clear items</button>
       </div>
     </section>
