--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body onload="onLoad()">
+  <body>
     <section class="section-center">
       <form class="shopping-form">
         <p class="alert"></p>
