--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <button class="clear-btn">clear items</button>
       </div>
     </section>
-    <script src="app.js" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
